# aligned-hackaton-game

./: .gitignore  .gitmodules  LevelMaker.js  Makefile  README.md
browser-game/: index.html  package.json
browser-game/src/: GameOptions.js  LevelThumbnail.js  PageSelector.js  main.js
browser-game/src/lib/: lib.js
browser-game/src/scenes/: Game.js  LevelSelect.js  MainMenu.js
game-logic/: Cargo.toml
game-logic/src/: directions.rs  game.rs  level.rs  lib.rs
leaderboard-contract/: README.md  foundry.toml  remappings.txt
leaderboard-contract/script/: Verifier.s.sol
leaderboard-contract/src/: LeaderBoard.sol  Verifier.sol
leaderboard-contract/test/: LeaderBoard.t.sol
program/: Cargo.toml  README.md
program-test/: Cargo.toml  README.md
program-test/src/: directions.rs  game.rs  level.rs  main.rs
program/elf/: commitment  riscv32im-succinct-zkvm-elf
program/src/: directions.rs  game.rs  level.rs  main.rs
prove/: Cargo.toml  README.md  VerifierContract.json  verification_key.txt
prove/src/: main.rs
prove/src/game/: main.rs
script/: Cargo.toml
script/src/: main.rs
